# Shape-Preserving-Simpilfication

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: DEVELOPMENT_PLAN.md
examples/: CMakeLists.txt  example_simplify.cpp
include/sps/core/: face.h  half_edge.h  mesh.h  region.h  types.h  vertex.h
include/sps/detection/: region_detection.h
include/sps/filter/: bilateral_filter.h
include/sps/io/: mesh_io.h
include/sps/simplify/: qem_simplifier.h  texture_baker.h  texture_transfer.h
src/: main.cpp
src/core/: mesh.cpp
src/detection/: region_detection.cpp
src/filter/: bilateral_filter.cpp
src/io/: mesh_io.cpp
src/simplify/: qem_simplifier.cpp  texture_baker.cpp  texture_transfer.cpp
tests/: CMakeLists.txt  test_basic.cpp
